# bank_opetaions_analysis

./: .env_template  pyproject.toml
src/: decorators.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
